--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Click==7.0
 Flask==1.1.1
 Flask-Admin==1.5.5
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
