--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 MarkupSafe==1.1.1
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
 SQLAlchemy==1.3.13
 Werkzeug==0.16.0
 WTForms==2.2.1
